<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_mainview"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_item_history"
            android:icon="@drawable/history"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_item_cart"
            android:icon="@drawable/icons8_sell_stock_24"
            android:title="@string/cart" />
        <item
            android:id="@+id/nav_item_logout"
            android:icon="@drawable/icons8_sign_out_24"
            android:title="@string/logout"
            />
    </group>
</menu>
